# so-nems-server

./: Cargo.toml
MCD/: MCD.architect  MCD.sql  create_subscribe.sql  delete_subscribe.sql  update_cmd_prod_with_quantity.sql  update_produit_with_ingredients_prix.sql
src/: main.rs  test_data_model.rs
src/test/: mod.rs  test1.rs  test_data_model.rs
